[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "mpservice"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
dependencies = [
    "asgiref",
    "deprecation",
    "overrides",
    "psutil",
    "uvicorn[standard] >=0.15.0,<1.0",
    "uvloop",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']


[project.urls]
Source = "https://github.com/zpz/mpservice"


[project.optional-dependencies]
doc = [
    "sphinx",
    "numpydoc",
    "pydata-sphinx-theme",
]
test = [
    "bandit",
    "coverage[toml]",
    "Faker",
    "flake8",
    "httpx",
    "mypy",
    "pylint",
    "pylint-exit",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "requests",
    "starlette",
    "zpz",
]


[tool.flit.module]
name = "mpservice"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-sv --log-cli-level info -p no:cacheprovider"
asyncio_mode = "auto"


[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true


[tool.coverage.run]
data_file = "/tmp/.coverage"


[tool.flake8]
ignore = ["E203", "E231", "E501", "W503"]


[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "attribute-defined-outside-init",
    "consider-using-f-string",
    "missing-docstring",
    "invalid-name",
    "line-too-long",
    "fixme",
    "no-else-return",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
]
