[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "mpservice"
authors = [
    {name = "Zepu Zhang", email = "zepu.zhang@gmail.com"},
]
dependencies = [
    "asgiref",
    "deprecation",
    "overrides",
    "psutil",
    "typing-extensions",
    "uvicorn[standard] >=0.15.0,<1.0",
    "uvloop",
]
requires-python = ">=3.8"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ['version', 'description']


[project.urls]
Source = "https://github.com/zpz/mpservice"


[project.optional-dependencies]
doc = [
    "sphinx",
    "numpydoc",
    "pydata-sphinx-theme",
]
test = [
    "coverage[toml]",
    "Faker",
    "httpx",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "requests",
    "starlette",
    "zpz",
    'ruff',
]


[tool.flit.module]
name = "mpservice"


[tool.ruff]
target-version = "py38"
select = ["E", "F", "I001"]  # isort
ignore = ["E501"]  # line length


[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-sv --log-cli-level info -p no:cacheprovider --tb=short"


[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true


[tool.coverage.run]
data_file = "/tmp/.coverage"
