[metadata]
name = mpservice
version = attr: mpservice.__version__
url = https://github.com/zpz/mpservice
description = model serving with multiprocessing and batching
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8


[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >= 3.7
install_requires=
    psutil >= 5.7.0
    pytz


[options.packages.find]
where = src


[options.package_data]
example = py.typed


[bdist_wheel]
universal=0
