[metadata]
name = mpservice
version = attr: mpservice.__version__
url = https://github.com/zpz/mpservice
description = Serving with asyncio, multiprocessing, and batching
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8


[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >= 3.8
install_requires=
    requests
    psutil >=5.7.0
    uvicorn >=0.15.0,<1.0
    starlette >=0.16.0,<1.0
    nest_asyncio >=1.5.1,<2.0


[options.packages.find]
where = src


[options.package_data]
example = py.typed
